including apartments in filter